animation changed for the header

--- a/Project-01/index.html
+++ b/Project-01/index.html
@@ -106,7 +106,9 @@
     <!-- hero -->
 
     <section id="hero" class="d-flex align-items-center">
-      <div class="container-fluid" data-aos="fade-right">
+      <div class="container-fluid" data-aos="fade-right"
+      data-aos-offset="300"
+      data-aos-easing="ease-in-sine">">
         <div class="row justify-content-center">
           <div
             class="col-xl-5 col-lg-6 pt-3 mb-md-5 pt-lg-0 order-2 order-lg-1 d-flex flex-column justify-content-center"
@@ -117,7 +119,7 @@
           </div>
           <div
             class="col-xl-4 col-lg-6 order-1 order-lg-2 hero-img"
-            data-aos="fade-left"
+            data-aos="zoom-in"
             data-aos-delay="150"
           >
             <img
