--- a/Project-01/student.html
+++ b/Project-01/student.html
@@ -99,7 +99,7 @@
 
     <!--  Contact Section -->
 
-    <section id="contact" class="contact bg-yellow">
+    <section id="contact" class="contact ">
       <div class="container">
         <div class="section-title text-center">
           <h2 class="font-weight-bolder display-4">Вработи студенти</h2>
@@ -180,7 +180,7 @@
                 Your message has been sent. Thank you!
               </div>
 
-              <div class="">
+              <div">
                 <button type="submit" class="butn">ИСПРАТИ</button>
               </div>
             </div>
@@ -195,8 +195,7 @@
       <div class="row">
         <div class="col text-center text-white pt-3">
           <p>
-            Изработено со <i class="fa-solid fa-heart text-danger pr-1"></i>од
-            студентите на Brainster
+            Изработено со <i class="fa-solid fa-heart text-danger pr-1"></i>од Traykovski
           </p>
         </div>
       </div>
